# garmin-dashboard

./: .cursorignoreindex  .gitignore  AGENT.md  AGENTS.md  README.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-to-user-site.yml  refresh-data.yml
backend/: AGENTS.md  README.md  pyproject.toml  ruff.toml  ty.toml
backend/scripts/: generate_mock_data.py  pull_garmin_data.py
backend/tests/: conftest.py  test_normalize.py
frontend/: REDESIGN_PLAN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/design/activity_overview/: code.html
frontend/design/apex_performance/: DESIGN.md
frontend/design/health_metrics/: code.html
frontend/design/training_status/: code.html
frontend/public/: 404.html
frontend/public/data/garmin/: activities.json  biometrics.json  body-battery.json  daily-2025-09-21.json  daily-2025-09-22.json  daily-2025-09-23.json  daily-2025-09-24.json  daily-2025-09-25.json  daily-2025-09-26.json  daily-2025-09-27.json  daily-2025-09-28.json  daily-2025-09-29.json  daily-2025-09-30.json  daily-2025-10-01.json  daily-2025-10-02.json  daily-2025-10-03.json  daily-2025-10-04.json  daily-2025-10-05.json  daily-2025-10-06.json  daily-2025-10-07.json  daily-2025-10-08.json  daily-2025-10-09.json  daily-2025-10-10.json  daily-2025-10-11.json  daily-2025-10-12.json  daily-2025-10-13.json  daily-2025-10-14.json  daily-2025-10-15.json  daily-2025-10-16.json  daily-2025-10-17.json  (+36 more)
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/pages/: DashboardPages.tsx
(+21 files in other folders)
