[project]
name = "garmin-backend"
version = "0.1.1"
description = "Local data fetcher for Garmin, writes JSON for frontend"
requires-python = ">=3.14"
dependencies = [
    "garminconnect>=0.2.30",
    "garth>=0.5.17",
    "polars>=1.34.0",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = ["ruff", "ty"]
